<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">校园100</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="home">首页</string>
    <string name="order">订单</string>
    <string name="community">社团</string>
    <string name="store">小卖部</string>
    <string name="edit">编辑</string>
    <string name="found">发现</string>
    <string name="personal">我的</string>
    <string name="personal_center">我的中心</string>
    <string name="location_failed">定位失败，请手动搜索</string>
    <string name="shoppingBill">购物清单</string>
    <string name="giftBill">礼品清单</string>
    <string name="myActivity">我的活动</string>
    <string name="myGOGO">我的云购</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="pull_down_to_refresh">下拉刷新</string>
    <string name="pull_up_to_refresh">上拉加载更多</string>
    <string name="refresh_start">正在刷新</string>
    <string name="refresh_end">刷新完成</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">点击加载更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="article061">  恋爱中的男女，喜欢互送一些精致的小礼物表达自己的爱意。的确，在适当的时候送恰当的礼物，可以让彼此的感情更甜蜜。对于现在的年轻人来说，选择礼物既要时尚贴心。女生还好，鲜花化妆品总是她们喜欢的。但是送给男朋友的礼物，却要花一些心思了。送给男友什么礼物最贴心？以下几种就是最好的答案。</string>
    <string name="article062">   DG钱包。关心他，就要关心他的生活。钱包是每个男人生活中不可缺少的，也是身份的象征。风靡全球的DG钱包是男人的最爱，代表着顶级的质量和男人独特的品味。自推出之后，DG便成为年轻人向往的欧洲风格的流行标志。在设计上，大量运用了各种具有弹性的材质，加上鲜艳的颜色，代表着自由、个性的年轻化风格。钱包里面棕色的三层构造，可以存放更多卡，还可以镶嵌你的靓照，让他时刻想着你。
ZIPPO打火机。如果男朋友吸烟的话，送一个ZIPPO打火机非常合适，尤其是这款恩爱一生。代表雄性美感的ZIPPO打火机是男人不可缺少的玩物之一，利用高贵的金属制外观与超强的实用效果证明了它的价值。可以雕刻上你们的爱情物语或是图案，让爱情变得更加执着。爱到深处，两个人的心就会融在一起。金属的质感把图案雕刻的充满了梦幻般的色彩，紧紧的缠绕在一起，寓意：携手一生，一起去感受爱情的甜蜜。
TWEAK鞋子。如今的男人，无论是上班族还是大学生，对于时尚的追求从未停止。都说女为悦己者容，男人又何尝不是如此呢。将自己的男朋友打扮的既时尚又个性，是每个女人的骄傲。那么，送款Tweak鞋子就是最好的选择之一。众所周知，tweak就是时尚的代名词。没有一款这样的鞋子，对于时尚潮人来说简直是无法忍受的。它没有固定的招牌款式，也没有固定的复刻版，完全能够体现现代男人的新潮和时尚。今年的新品，更是将复古风完美体现出来。送一双这样的鞋子给男朋友，尽显贴心。
PHILIPS剃须刀。紧张的生活节奏，往往会让我们忽略掉很多的东西。对于现在的上班族来说，似乎每个清晨都是在忙碌和繁乱中度过的，吃早点的时间几乎没有。送给男朋友一把好的剃须刀，为他的清晨争取多5分钟，可以坐下来喝一杯温温的牛奶。对于每个时尚的男人来说，一款飞利浦剃须刀是最好的选择。更为重要的是，送剃须刀给他，不仅让他的生活更从容，也让他感觉到你的贴心和柔情。
Julius男士手表。对于男人来说，手表是身份和品位的象征。男人没有一款好的手表，就像女人没有化妆一样不自信。送一款Julius男士手表送男朋友，就是送出了一分男人的自信。这款男士手表，外观高档，高强度表面坚硬的表盘，配上流行的咖啡色，彰显男士优雅的风范。送一款手表，送一份惊喜，让他体现男人无法比拟的风度和大气。</string>
    <string name="article091">  朋友之间，难道有比友谊更珍贵的礼物吗？没有。
 在朋友遇到挫折时，一张贺卡，一枝鲜花，或是一本小书，都包含着你对他的鼓励，有时，甚至一个微笑就够了。
 同样，在朋友意气风发、前途顺畅的时候，送上一份小礼，更是对他的激励和鞭策。　俗话说，君子之交淡如水，友谊在，一杯水也是好礼。</string>
    <string name="article092">  给朋友送礼要真诚，勉强为之，或是有求于朋友时，才想起您的重磅礼物和糖衣炮弹，显然有悖于朋友的道义。
 朋友需要沟通，您送去的礼品便可成为理解的桥梁，取得朋友的信任，加深你们的友谊。
 兴趣为上朋友是因为共同的爱好和相近的志趣，才走到一起去的，送给朋友感兴趣的礼物，能表明您对你们之间友谊的重视。</string>
    <string name="article093"> 想给予朋友忠告时，可用礼物来做温婉的表达。再美好的台词也比不上礼物那般平和温柔。接受者在感到有趣的同时，必定会受到感动。但注意不要嘲笑对方！送礼不仅要有诚意，更要充满体谅和亲切之心。
请他吃最爱吃的菜，陪他痛快地畅饮一回适合送给失恋的朋友维他命、草莓、柠檬或唱片、录音带等送给工作忙碌的朋友，以消除疲劳 照明设备，如100W的灯炮、小型壁灯送给情绪化的朋友，让他心胸开朗明亮 将维他命剂装进小药罐子里，再贴上“特制补充元气”的标签送给遭遇挫折的朋友，助他恢复元气小范围地开个勉励舞会送给被上司责骂的朋友 毛衣、围巾最好是自己亲手编织的，送给名落孙山的朋友，这会让他心里热乎乎的 一本字典或有关口才的书送给词汇不足、讲话不懂得修饰的朋友10个橡皮擦送给闷闷不乐的朋友，并附卡片：擦掉所有的伤痕，早日恢复往日的笑容 大海螺送给不遵守约定的朋友们大气球送给爱吹牛皮的朋友 空盒子盒子里只有一张说明信息的卡片，送给绣花枕头般毫无内涵的朋友 坐禅的书送给缺乏沉着稳重的朋友 玩具和童谣录音并祝：母子同乐！送给有孩子的女性朋友 奶瓶并预祝：早点断奶，送给依赖感强的女性朋友丑角洋娃娃送给见人一团和气的朋友，他在人群中扮演着开心果的角色。感谢他带来无限的欢笑 一套打毛衣的针及编织手册送给缺乏耐性的朋友</string>
    <string name="article094"> 一份杂志或某个协会的会员资格由您帮助订购或申请 旅行用的咖啡杯在旅行中能派上用场 私人专用的便条纸或文具用品家中或办公室里都能用得着的物品 风趣幽默的丛书比较适合热爱生活的朋友 热门畅销的有声书特别适合那些常出远门的朋友 时钟一份永不受时间限制的礼物 一场晚场的喜剧片在特定的时间里观赏将十分有趣一张海报，或是已裱框的图片简单且富有艺术情调 一只漂亮的垃圾桶是朋友的办公室或书房里实用的物品 富有启发性的名言将其裱悬挂，可起到装饰作用励志类的书籍例如激发工作兴趣或性格指导方面的书籍 图书礼券或文具用品礼券适合朋友随意购买自己喜欢的书籍或文具 电脑绘图所制成的壁纸选择朋友喜爱的颜色和式样 星座算命及天文学类的书籍事先确定对方对此类书籍是否有阅读兴趣</string>
    <string name="article095"> 电脑入门学习班适合那些老是要你教他使用电脑的朋友 语言速成班如法语班、日语班等，如果您有出国或工作上的需要 投资理财课程适合对于投资理财有兴趣的朋友厨师学校适合对烹饪有兴趣或以厨师作为职业的朋友 摄影班适合摄影爱好者的学习课程 瑜珈课程古老的健身运动，特别适合女性朋友 舍宾课程灌输现代健身及瘦身技巧 专业舞蹈训练班如爵土舞、踢踏舞、交际舞等训练班，根据朋友的爱好选择 健身课程例如举重、健美或者练肌肉，衡量自己有没有大块的时间和耐久性大众化的训练课程如溜冰、大众舞蹈、游泳、潜水、攀岩等，选朋友喜爱的运动为其报名</string>
    <string name="article096"> 种植一棵树种在本地的公园或校园，树上挂有朋友姓名的牌子以作纪念 为朋友写一首诗、作一个曲子或是编一个故事适合送给相交很深的朋友 聚会或庆祝活动的录音、录像可长期保留的礼物 替朋友报名未婚联谊如果朋友总鼓不起勇气去报名参加的话 一把实用的好伞不要以为送伞不吉利，其实好伞一般都受朋友的欢迎全身按摩或指压招待券可为朋友舒解身心上的疲劳和压力一朵鲜花放在朋友车子的挡风玻璃上，会使其心中不快一扫而空一盘与松弛、冥想、意念引导有关的录音带或CD可使其安静或舒缓工作压力 手球通常将它们握在手心，在手掌中流动，可解除压力 一袋装有散发香味的用品如护手乳液、护唇膏、古龙水等。注意选择朋友喜欢的品牌 请朋友上一次餐厅最直接的礼物和交流方式，可约上朋友的朋友一起去 从故乡寄来的土特产分赠给不同的朋友，好吃的东西，不妨与好朋友分享 抗压性芳香精油可舒缓紧张的工作压力或放松心情</string>
    <string name="article101"> 送朋友什么礼物好？我们送名家字画来巩固我们之间的友情。人们常说朋友是一辈子的事，有一个懂得自己的知己，此乃上天恩赐的幸运事，所以我们要把我这份来之不易的友情。感情既要经得住考验，也要时常来巩固加深，友情也不例外。如果我们发现一幅自己喜欢烦人名家山水画，把它收藏起来，和自己的朋友共同欣赏，如若朋友喜欢，坦然相送，相信朋友定会记住你这份情谊。
　　生命中或许可以没有感动、没有胜利、没有其他东西，但是不能没有朋友。朋友是我们生活中的一部分，中华民族又是崇尚礼仪的民族，朋友之间表达感情，送字画，在相互了解的基础上，根据对方的兴趣爱好，选择富有意义、品质不凡的名家山水画作品，方能表达对朋友烦人祝福和美好愿景。</string>

</resources>