<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/iv_empty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_menuBar"
            android:background="@color/gray_f8f8f8" >

            <RelativeLayout
                android:id="@+id/rl_back"
                android:layout_width="@dimen/height_menuBar"
                android:layout_height="match_parent" >

                <ImageView
                    android:layout_width="19dp"
                    android:layout_height="19dp"
                    android:layout_centerInParent="true"
                    android:background="@drawable/icon_back_red" />
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginLeft="48dp"
                android:gravity="center"
                android:text="送普通朋友什么生日礼物好 ?"
                android:textColor="@android:color/black"
                android:textSize="14sp" />

            <RelativeLayout
                android:id="@+id/rl_more"
                android:layout_width="@dimen/height_menuBar"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true" >

                <ImageView
                    android:layout_width="19dp"
                    android:layout_height="19dp"
                    android:layout_centerInParent="true"
                    android:background="@drawable/icon_more" />
            </RelativeLayout>
        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/height_menuBar"
            android:scrollbars="none" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/article09" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:lineSpacingExtra="5dp"
                    android:text="不求贵重"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:lineSpacingExtra="5dp"
                    android:text="@string/article091"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:lineSpacingExtra="5dp"
                    android:text="真诚理解"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:lineSpacingExtra="5dp"
                    android:text="@string/article092"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:lineSpacingExtra="5dp"
                    android:text="A 需要鼓励和劝戒的朋友"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:lineSpacingExtra="5dp"
                    android:text="@string/article093"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:lineSpacingExtra="5dp"
                    android:text="B 爱好广泛的朋友"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:lineSpacingExtra="5dp"
                    android:text="@string/article094"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:lineSpacingExtra="5dp"
                    android:text="C 喜欢上各类课程的朋友"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:lineSpacingExtra="5dp"
                    android:text="@string/article095"
                    android:textColor="@color/black"
                    android:textSize="12sp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:lineSpacingExtra="5dp"
                    android:text="D 值得关心和纪念的朋友"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:lineSpacingExtra="5dp"
                    android:text="@string/article096"
                    android:textColor="@color/black"
                    android:textSize="12sp" />
            </LinearLayout>
        </ScrollView>

        <include
            layout="@layout/item_popupwindow"
            android:visibility="gone" />
    </RelativeLayout>

</LinearLayout>