<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root_below"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/none_color"
    android:orientation="vertical" >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_line"
        android:background="@color/line_below" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="horizontal" >

        <RelativeLayout
            android:id="@+id/rl_home"
            android:layout_width="0dp"
            android:layout_height="@dimen/height_menuBar"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:clickable="true" >

            <ImageView
                android:id="@+id/iv_home"
                android:layout_width="@dimen/size_iconBelow"
                android:layout_height="@dimen/size_iconBelow"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/space_iconBelow"
                android:background="@drawable/home" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="2dp"
                android:text="@string/home"
                android:textSize="10sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_community"
            android:layout_width="0dp"
            android:layout_height="@dimen/height_menuBar"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:clickable="true" >

            <ImageView
                android:id="@+id/iv_community"
                android:layout_width="@dimen/size_iconBelow"
                android:layout_height="@dimen/size_iconBelow"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/space_iconBelow"
                android:background="@drawable/community" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="2dp"
                android:text="@string/community"
                android:textSize="10sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_store"
            android:layout_width="0dp"
            android:layout_height="63dp"
            android:layout_weight="1"
            android:clickable="true" >

            <ImageView
                android:id="@+id/iv_store"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:background="@drawable/store" />

<!--             <TextView -->
<!--                 android:layout_width="wrap_content" -->
<!--                 android:layout_height="wrap_content" -->
<!--                 android:layout_alignParentBottom="true" -->
<!--                 android:layout_centerHorizontal="true" -->
<!--                 android:layout_marginBottom="2dp" -->
<!--                 android:text="@string/store" -->
<!--                 android:textSize="10sp" -->
<!--                 android:textStyle="bold" /> -->
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_found"
            android:layout_width="0dp"
            android:layout_height="@dimen/height_menuBar"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:clickable="true" >

            <ImageView
                android:id="@+id/iv_found"
                android:layout_width="@dimen/size_iconBelow"
                android:layout_height="@dimen/size_iconBelow"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/space_iconBelow"
                android:background="@drawable/found" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="2dp"
                android:text="@string/found"
                android:textSize="10sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_count"
                android:layout_width="wrap_content"
                android:layout_height="12dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="15dp"
                android:layout_marginTop="2dp"
                android:background="@drawable/shape_count_cart"
                android:gravity="center"
                android:minWidth="12dp"
                android:text="1"
                android:textColor="@android:color/white"
                android:textSize="8sp"
                android:visibility="gone" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_personal"
            android:layout_width="0dp"
            android:layout_height="@dimen/height_menuBar"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:clickable="true" >

            <ImageView
                android:id="@+id/iv_personal"
                android:layout_width="@dimen/size_iconBelow"
                android:layout_height="@dimen/size_iconBelow"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/space_iconBelow"
                android:background="@drawable/personal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="2dp"
                android:text="@string/personal"
                android:textSize="10sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/iv_circle"
                android:layout_width="6dp"
                android:layout_height="6dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="18dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/shape_circle_red"
                android:visibility="gone" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>