<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_empty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/red_fd3c49" />
    <!-- <LinearLayout -->
    <!-- android:layout_width="match_parent" -->
    <!-- android:layout_height="match_parent" -->
    <!-- android:orientation="vertical" > -->


    <!-- <com.loosoo100.campus100.view.MyViewPager -->
    <!-- android:id="@+id/viewPager_main" -->
    <!-- android:layout_width="match_parent" -->
    <!-- android:layout_height="0dp" -->
    <!-- android:layout_weight="1" /> -->


    <!-- <include layout="@layout/menubar_below" /> -->
    <!-- </LinearLayout> -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/fl_container"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"></FrameLayout>

            <ImageView
                android:id="@+id/iv_below"
                android:layout_width="match_parent"
                android:layout_height="48.4dp"
                android:background="@color/none_color" />
        </LinearLayout>
        <!-- <include -->
        <!-- android:layout_alignParentBottom="true" -->
        <!-- layout="@layout/menubar_below" /> -->

        <RelativeLayout
            android:id="@+id/root_below"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:layout_alignParentBottom="true"
            android:background="@color/none_color"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_line"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="48dp"
                android:background="@color/line_below" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:orientation="horizontal">

                <RelativeLayout
                    android:id="@+id/rl_home"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/height_menuBar"
                    android:layout_weight="1"
                    android:background="@android:color/white"
                    android:clickable="true">

                    <ImageView
                        android:id="@+id/iv_home"
                        android:layout_width="@dimen/size_iconBelow"
                        android:layout_height="@dimen/size_iconBelow"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="@dimen/space_iconBelow"
                        android:background="@drawable/recommend_select" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="2dp"
                        android:text="推荐"
                        android:textSize="10sp"
                        android:textStyle="bold" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rl_community"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/height_menuBar"
                    android:layout_weight="1"
                    android:background="@android:color/white"
                    android:clickable="true">

                    <ImageView
                        android:id="@+id/iv_community"
                        android:layout_width="@dimen/size_iconBelow"
                        android:layout_height="@dimen/size_iconBelow"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="@dimen/space_iconBelow"
                        android:background="@drawable/message" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="2dp"
                        android:text="聊天"
                        android:textSize="10sp"
                        android:textStyle="bold" />

                    <com.loosoo100.campus100.chat.widget.DragPointView
                        android:id="@+id/unread_num"
                        android:layout_width="12dp"
                        android:layout_height="12dp"
                        android:layout_alignParentRight="true"
                        android:layout_gravity="right"
                        android:layout_marginRight="12dp"
                        android:layout_marginTop="2dp"
                        android:textColor="@android:color/white"
                        android:textSize="8sp"
                        android:visibility="invisible" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rl_store"
                    android:layout_width="0dp"
                    android:layout_height="63dp"
                    android:layout_weight="1"
                    android:clickable="true">

                    <ImageView
                        android:id="@+id/iv_store"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/store" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="2dp"
                        android:text="@string/store"
                        android:textSize="10sp"
                        android:textStyle="bold" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rl_found"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/height_menuBar"
                    android:layout_weight="1"
                    android:background="@android:color/white"
                    android:clickable="true">

                    <ImageView
                        android:id="@+id/iv_found"
                        android:layout_width="@dimen/size_iconBelow"
                        android:layout_height="@dimen/size_iconBelow"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="@dimen/space_iconBelow"
                        android:background="@drawable/found" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="2dp"
                        android:text="@string/found"
                        android:textSize="10sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_count"
                        android:layout_width="wrap_content"
                        android:layout_height="12dp"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginRight="15dp"
                        android:layout_marginTop="2dp"
                        android:background="@drawable/shape_count_cart"
                        android:gravity="center"
                        android:minWidth="12dp"
                        android:text="1"
                        android:textColor="@android:color/white"
                        android:textSize="8sp"
                        android:visibility="gone" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rl_personal"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/height_menuBar"
                    android:layout_weight="1"
                    android:background="@android:color/white"
                    android:clickable="true">

                    <ImageView
                        android:id="@+id/iv_personal"
                        android:layout_width="@dimen/size_iconBelow"
                        android:layout_height="@dimen/size_iconBelow"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="@dimen/space_iconBelow"
                        android:background="@drawable/personal" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="2dp"
                        android:text="@string/personal"
                        android:textSize="10sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/iv_circle"
                        android:layout_width="6dp"
                        android:layout_height="6dp"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginRight="18dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/shape_circle_red"
                        android:visibility="gone" />
                </RelativeLayout>
            </LinearLayout>

            <!-- <RelativeLayout -->
            <!-- android:id="@+id/rl_below" -->
            <!-- android:layout_width="match_parent" -->
            <!-- android:layout_height="48.4dp" -->
            <!-- android:layout_alignParentBottom="true" -->
            <!-- android:background="@color/black_a80" -->
            <!-- android:clickable="true" -->
            <!-- android:visibility="gone" /> -->
        </RelativeLayout>
    </RelativeLayout>

</LinearLayout>